--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <section id="first-page">
     <header>
       <nav>
-        <p>Indonesia</p>
+        <p>INDONESIA</p>
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
@@ -21,8 +21,10 @@
     <div class="content">
       <h1>INDONESIAKU</h1>
       <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta beatae facilis voluptas illo quam numquam sed assumenda modi sunt nostrum.</P>
-      <a href="#"><button>learn More</button></a>
-      <a href="#"><button>Get Started</button></a>
+      <div class="button">
+        <a class="lm" href="#">learn More</a>
+        <a class="gs" href="#">Get Started</a>
+      </div>
     </div>
   </section>
 </body>
