--- a/index.html
+++ b/index.html
@@ -27,5 +27,23 @@
       </div>
     </div>
   </section>
+
+  <section id="second-page">
+    <div class="container">
+      <img src="assets/img/17_-_an_-_dribbble.png" alt="pinang">
+      <div class="content">
+        <h1>Nusantara</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae iste est neque quas quod esse dolorem iure reiciendis perspiciatis pariatur voluptatum ex aut modi temporibus ullam autem officiis, earum laborum ipsa ad! Optio deserunt consequuntur earum dolorem adipisci sit dolorum velit, reiciendis ut, animi vero, cupiditate quam pariatur minus inventore?</p>
+        <ul>
+          <li><a href="">Wonderfull</a></li>
+          <li><a href="">Amazing</a></li>
+          <li><a href="">Beautifull</a></li>
+          <li><a href="">Excellent</a></li>
+          <li><a href="">Magic</a></li>
+          <li><a href="">Great</a></li>
+        </ul>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
