--- a/index.html
+++ b/index.html
@@ -45,5 +45,24 @@
       </div>
     </div>
   </section>
+
+  <section id="third-page">
+    <div class="container">
+      <div class="title">
+        <h2>Wonderfull Indonesia</h2>
+      </div>
+      <div class="content">
+        <div class="box">
+          <div class="details">
+            <h3>Danau Toba</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum autem consequuntur aliquid, ab ducimus atque perferendis vel libero labore cum?</p>
+          </div>
+        </div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
