--- a/index.html
+++ b/index.html
@@ -52,17 +52,49 @@
         <h2>Wonderfull Indonesia</h2>
       </div>
       <div class="content">
-        <div class="box">
+        <div class="box box-1">
           <div class="details">
             <h3>Danau Toba</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum autem consequuntur aliquid, ab ducimus atque perferendis vel libero labore cum?</p>
           </div>
         </div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
+        <div class="box box-2">
+          <div class="details">
+            <h3>Candi Borobudur</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum autem consequuntur aliquid, ab ducimus atque perferendis vel libero labore cum?</p>
+          </div>
+        </div>
+        <div class="box box-3">
+          <div class="details">
+            <h3>Raja Ampat</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum autem consequuntur aliquid, ab ducimus atque perferendis vel libero labore cum?</p>
+          </div>
+        </div>
+        <div class="box box-4">
+          <div class="details">
+            <h3>Bedugul Bali</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum autem consequuntur aliquid, ab ducimus atque perferendis vel libero labore cum?</p>
+          </div>
+        </div>
       </div>
     </div>
   </section>
+
+  <section id="fourth-page">
+    <div class="container">
+      <div class="content">
+        <div class="details">
+          <h2>PRIBUMI</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, velit error. Veniam fugiat dolorum odio repudiandae temporibus mollitia aperiam ipsam nisi laborum cumque est, excepturi omnis dolore culpa, dolores perspiciatis neque ea numquam. Dicta autem aliquam blanditiis qui dignissimos ea iure est? Fugiat facere accusamus corporis expedita vel hic ea alias ipsa placeat ullam itaque saepe voluptatum ducimus obcaecati aperiam consectetur ratione, in a magni corrupti tempora blanditiis doloribus fuga inventore! Blanditiis tempore ea corrupti, soluta possimus veniam exercitationem maxime unde sint dolor excepturi dolores consequatur harum mollitia molestiae necessitatibus laboriosam modi qui numquam atque beatae! Sapiente blanditiis quos unde.</p>
+        </div>
+        <img src="assets/img/photo-1494832944834-a08818c634b0.jpg" alt="">
+      </div>
+      <footer>
+        <p>HAPPY INDEPENDENCE DAY INDONESIAKU</p>
+        <P>17 Agustus 2019</P>
+      </footer>
+    </div>
+  </section>
+
 </body>
 </html>
