--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="content">
         <div class="details">
           <h2>PRIBUMI</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, velit error. Veniam fugiat dolorum odio repudiandae temporibus mollitia aperiam ipsam nisi laborum cumque est, excepturi omnis dolore culpa, dolores perspiciatis neque ea numquam. Dicta autem aliquam blanditiis qui dignissimos ea iure est? Fugiat facere accusamus corporis expedita vel hic ea alias ipsa placeat ullam itaque saepe voluptatum ducimus obcaecati aperiam consectetur ratione, in a magni corrupti tempora blanditiis doloribus fuga inventore! Blanditiis tempore ea corrupti, soluta possimus veniam exercitationem maxime unde sint dolor excepturi dolores consequatur harum mollitia molestiae necessitatibus laboriosam modi qui numquam atque beatae! Sapiente blanditiis quos unde.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quibusdam molestias quasi voluptates laborum voluptas. Vero laboriosam impedit repudiandae harum facere incidunt eius ducimus pariatur modi nostrum, sint, asperiores magnam? Nulla reiciendis, iusto consectetur nisi facere sint? Minus ratione quam error tenetur dicta maxime corrupti aspernatur voluptatem, rerum beatae, aliquid hic est, dolorum quo explicabo ipsam repellat id delectus architecto.</p>
         </div>
         <img src="assets/img/photo-1494832944834-a08818c634b0.jpg" alt="">
       </div>
