--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>new indo</title>
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Beautiful Indonesia</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
